app2-simalguven/nodePortService-notActive.yaml
apiVersion: v1
kind: Service
metadata:
  name: wapp-service
spec:
  selector:
    app: wapp
  ports:
    - name: http
      protocol: TCP
      port: 80        # The port that the service exposes internally
      targetPort: 80  # The port on the frontend container
      nodePort: 30001 # Optional, specify this if using NodePort
    - name: api
      protocol: TCP
      port: 3000      # The port that the service exposes internally for backend
      targetPort: 3000  # The port on the backend container
      nodePort: 30002 # Optional, specify this if using NodePort
  type: NodePort     # Change this to LoadBalancer if you're on a cloud providerö
