app2-simalguven/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wapp-ingress
  namespace: default
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
